manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "akstodoitem-a7ad"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "akstodoitem-a7ad"
  template:
    metadata:
      labels:
        app: "akstodoitem-a7ad"
    spec:
      containers:
        - name: "akstodoitem-a7ad"
          image: "ctodoitem.azurecr.io/akstodoitem"
          ports:
          - containerPort: 80
