manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: "akstodoitem-a7ad"
    labels:
        app: "akstodoitem-a7ad"
spec:
    type: ClusterIP
    ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
    selector:
        app: "akstodoitem-a7ad"
